# litellm_proxy

./: .gitignore  .tmp_litellm_config.yaml  ENHANCEMENT.md  FEATURE.md  README.md  SPEC.md  TEST.md  chrome-profile-manager.sh  chrome_web_search.py  custom_hooks.py  ddgs_search.py  docker-compose.yml  gemini-automation-ax.js  litellm_config.yaml  main.py  manage.sh  package-lock.json  package.json  page_dump.html  payload_logger.py  pyproject.toml  route_model_mapping.yaml  routing_hook.py  search_storage.py  setup_chrome_profile.sh  temporal_parser.py  test_client.py  test_route.sh  url_fetcher.js  url_fetcher.py  view_payloads.py
chrome-profiles/profile1/: Local State  config.json
chrome-profiles/profile1/Default/: BrowsingTopicsState  Cookies  DIPS  History  (+10 more)
tests/: test_chrome_headless.py  test_chrome_search.py  test_hooks.py
web_search/: duckduckgo_20260316_081415_552565.json  duckduckgo_20260316_081610_209434.json  duckduckgo_20260316_081727_780766.json  duckduckgo_20260316_081754_419036.json  duckduckgo_20260316_081803_596685.json  duckduckgo_20260316_082338_324158.json  duckduckgo_20260316_082349_570623.json  duckduckgo_20260316_082542_416293.json  duckduckgo_20260316_082542_553115.json  duckduckgo_20260316_082739_932462.json  duckduckgo_20260316_082840_635010.json  duckduckgo_search_google_latest_news_about_gxs_bank_interest__20260317_085818.json  duckduckgo_search_the_new_ceo_of_gxs_bank_20260317_085947.json
web_search/content/: top-tvdoc_ru__metod-rogova-3-sezon-1-vypusk-08-03-2026__20260315_212915.md  vk_com__video-235616071_456239154_20260315_212918.md
(+330 files in other folders)
