[project]
name = "litellm-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "litellm[proxy]>=1.82.2",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "rich>=13.9.4",
    "ddgs>=9.0.0",
    "python-dateutil>=2.9.0",
    "markdownify>=1.2.0",
    "trafilatura>=2.0.0",
]
